--- a/SpotifyStreamer/app/src/main/AndroidManifest.xml
+++ b/SpotifyStreamer/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.ekeitho.spotify" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -11,11 +10,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".view.ArtistSearch"
-            android:label="@string/app_name" >
+            android:name=".SpotifyActivity"
+            android:label="@string/title_activity_spotify" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
