--- a/Portfolio/app/src/main/AndroidManifest.xml
+++ b/Portfolio/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.ekeitho.portfolio" >
 
     <application
+        android:theme="@style/CustomActionBarTheme"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name=".PortfolioActivity"
             android:label="@string/app_name" >
