--- a/SpotifyStreamer/app/build.gradle
+++ b/SpotifyStreamer/app/build.gradle
@@ -8,12 +8,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 21
     buildToolsVersion "22"
 
     defaultConfig {
         applicationId "com.ekeitho.spotify"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -28,10 +28,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile(name:'spotify-web-api-android-0.1.0', ext:'aar')
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
