there are now paid and free flavors. fixed double app build by changing the manifest in the android librar

--- a/FinalProject/jokeplatform/src/main/AndroidManifest.xml
+++ b/FinalProject/jokeplatform/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         <activity
             android:name=".JokePlatform"
             android:label="@string/app_name">
+            <!-- having this would build two apps, good to know.
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
     </application>
