--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -12,6 +12,14 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled true
