--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -43,8 +43,8 @@ sourceCompatibility = 1.7
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":javajokes"), project(":jokeplatform")
-    // Added for AdMob
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    // Added for AdMob
+    freeCompile 'com.google.android.gms:play-services:8.4.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
